# image-size-scanner

./: .gitignore  CMakeLists.txt  README.md  main.cpp
